--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!-- 
+  Author
+Name: EMAMUL ISLAM SHAJ
+ID: WEB8-1857
+Batch: 8
+Assignment: 5
+
+ -->
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,6 +21,9 @@
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 <link href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+
+<!-- favicon -->
+<link rel="shortcut icon" href="./images/Summer 1.png" type="image/x-icon">
 <style>
     *{
         font-family: 'Work Sans', sans-serif;
