--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@ Assignment: 5
                 <img src="./images/Summer 1.png" class="max-w-sm rounded-lg w-56 md:w-full lg:w-full" />
               
               <div>
-                <h1 class="text-sm md:text-xl lg:text-xl font-semibold text-center">---SALE FEVER---</h1>
-                <h2 class="py-6 text-xl md:text-5xl lg:text-5xl font-bold">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h2>
+                <h1 class="text-sm md:text-md lg:text-xl font-semibold text-center">---SALE FEVER---</h1>
+                <h2 class="py-6 text-xl md:text-3xl lg:text-5xl font-bold">Purchase TK 200 or <br> above & get <span class="text-[#E527B2]">20% off</span></h2>
 
                 <br>
                 <br>
@@ -66,7 +66,7 @@ Assignment: 5
                     <!--item 1-->
                     
                         <div id="card" class="card  bg-base-100 shadow-xl">
-                            <div class="px-10 py-10 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
+                            <div class="px-10 py-7 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
                               <img src="./images/prod1.png" alt="k.accessories" class="rounded-xl " />
                             </div>
                             <div class="card-body items-center text-center">
@@ -143,7 +143,7 @@ Assignment: 5
                       </div>
                     <!--item 2-->
                     <div id="card" class="card bg-base-100 shadow-xl">
-                        <div class="px-10 py-9 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
+                        <div class="px-10 py-6 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
                           <img src="./images/prod5.png" alt="k.accessories" class="rounded-xl " />
                         </div>
                         <div class="card-body items-center text-center">
@@ -200,7 +200,7 @@ Assignment: 5
                       </div>
                     <!--item 2-->
                     <div id="card" class="card  bg-base-100 shadow-xl">
-                        <div class="px-10 py-9 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
+                        <div class="px-10 py-6 bg-[#1111110D] w-5/6 mx-auto rounded-xl">
                           <img src="./images/prod8.png" alt="k.accessories" class="rounded-xl " />
                         </div>
                         <div class="card-body items-center text-center">
